--- a/html/contact.html
+++ b/html/contact.html
@@ -71,24 +71,27 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 my-5 boxs">
-                    <form action="">
-                        <div class=" mb-3">
-                            <label for="exampleinput" id="exampleinputmail">Email Address</label>
-                            <input type="email" class="form-control" id="exampleinputemail"
-                                aria-describedby="emailhelp">
-                            <div id="emailhelp" class="form-text">we'll never share your mail address anyone alse</div>
+                    <form class="form">
+                        <div class="flex">
                         </div>
-                        <div class="mb-3">
-                            <label for="exampleinput" class="form-lable">Password</label>
-                            <input type="password" class="form-control" id="exampleinput password">
 
-                        </div>
-                        <div class="my-3">
-                            <a for="validationtexteria"
-                                class="form-lable text-decoration-none bg-red text-dark p-2">Message</a>
-                            <textarea name="message" id="validationtexteria" class="form-control mt-3"
-                                placeholder="required example rexteria" rows="5" required></textarea>
-                        </div>
+                        <label>
+                            <input class="input" type="email" placeholder="" required="">
+                            <span>Name</span>
+                        </label>
+
+                        <label>
+                            <input class="input" placeholder="" type="tel" required="">
+                            <span>Email</span>
+                        </label>
+                        <label>
+                            <textarea class="input01" placeholder="" rows="3" required=""></textarea>
+                            <span>message</span>
+                        </label>
+
+                        <button href="#" class="fancy">
+                            <span class="text">submit</span>
+                        </button>
                     </form>
                 </div>
     </section>
@@ -105,7 +108,9 @@
                         <i class="fa fs-2 fa-twitter" aria-hidden="true"></i>
                     </div>
                     <div>
-                        <marquee behavior="" direction="" class="cradiend">NITHISH....</marquee>
+                        <marquee behavior="" direction="" class="cradiend fw-bold">
+                            <<<<span class="fs-1">N</span>ITHISH >>>
+                        </marquee>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 mt-5">
