--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -131,7 +131,9 @@
                         <i class="fa fs-2 fa-twitter" aria-hidden="true"></i>
                     </div>
                     <div>
-                        <marquee behavior="" direction="" class="cradiend">NITHISH....</marquee>
+                        <marquee behavior="" direction="" class="cradiend fw-bold">
+                            <<<<span class="fs-1">N</span>ITHISH >>>
+                        </marquee>
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 mt-5">
