--- a/html/contact.html
+++ b/html/contact.html
@@ -76,20 +76,20 @@
                         </div>
 
                         <label>
-                            <input class="input" type="email" placeholder="" required="">
+                            <input class="input" type="email" placeholder="">
                             <span>Name</span>
                         </label>
 
                         <label>
-                            <input class="input" placeholder="" type="tel" required="">
+                            <input class="input" placeholder="" type="tel" >
                             <span>Email</span>
                         </label>
                         <label>
-                            <textarea class="input01" placeholder="" rows="3" required=""></textarea>
+                            <textarea class="input01" placeholder="" rows="3"></textarea>
                             <span>message</span>
                         </label>
 
-                        <button href="#" class="fancy">
+                        <button  class="fancy">
                             <span class="text">submit</span>
                         </button>
                     </form>
