--- a/index.html
+++ b/index.html
@@ -583,9 +583,10 @@
                                 <span>message</span>
                             </label>
 
+                              <div class="px-1">
                             <button class="fancy">
                                 <span class="text">submit</span>
-                            </button>
+                            </button></div>
                         </form>
                     </div>
         </section>
